multiple updates to grammar, spelling and readability of the story

--- a/draft-scenarios/campaigns/castle_greek_gift.tex
+++ b/draft-scenarios/campaigns/castle_greek_gift.tex
@@ -6,7 +6,7 @@
 
 \textbf{Author:} Tyson Heckert
 
-\textbf{Source:} \href{https://travelledtales.com}{Travelled Tales}
+\textbf{Source:} \href{https://travelledtales.com}{travelledtales.com}
 
 \textit{Steadwick is free, but that doesn't mean it is safe.
 Dark powers still roam Erathia, and one now moves its pieces into position.
@@ -28,7 +28,7 @@ This Scenario plays out over 8 Rounds.
 
 \textbf{Starting Units:}
 \begin{itemize}
-  \item A Few Halberdiers, A Few Marksmen
+  \item A Few Halberdiers, a Few Marksmen
 \end{itemize}
 
 \textbf{Town Buildings:} \svgunit{bronze} Dwelling, Citadel
@@ -37,7 +37,7 @@ This Scenario plays out over 8 Rounds.
 
 \textbf{Faction:} Necropolis
 
-\textbf{Enemy Army:} A Pack of Skeletons, A Pack of Zombies, A Few Dread Knights, A Few Ghost Dragons
+\textbf{Enemy Army:} A Pack of Skeletons, a Pack of Zombies, a Few Dread Knights, a Few Ghost Dragons
 
 \textbf{Enemy Deck:} 4 x Might cards
 
@@ -137,21 +137,21 @@ During this Castle campaign Scenario, the following rules apply:
 
 \textbf{Distant Threat}
 
-Catherine Ironfist rubbed a tired and worn thumb across the image of her father, King Gryphonheart, in a locket.
+Catherine Ironfist rubbed her tired, worn thumb across the image of her father, King Gryphonheart, in a locket.
 She wanted to remember the good, valiant parts of his life rather than his actions in unlife.
 Her gaze turned to her cracked skin and mangled thumbnail, and it reminded her of how hard she had fought to be where she was.
 
-The mantle of Erathia was hers.
+The weight of Erathia rested on her shoulders.
 It had only been weeks since the siege and recapture of Steadwick, and resources, as well as manpower, were in short supply.
 Still, with time, the stony seat of the castle would be sufficient to further liberate the realm.
 
 One such problem was weighing on her mind.
 After replacing the locket in her hand with a missive, she re-read a particular entry about a rising necromancer named Vhidhax.
 Rumors were that the fiend had stolen precious artifacts that further enhanced his power over the dead.
-While rumors are usually best left to fishwives and children, it lined up with further information about an army waxing in strength, and she dreaded the thought of the two problems colliding and crashing over her weary crown.
+While rumors are usually best left to fishwives and children, this one aligned with information about an army growing in strength, and she dreaded the thought of the two problems colliding and crashing over her weary crown.
 
-Late that evening, Catherine was venting to Rion about the relative drudgery of re-building Steadwick.
-She'd just about fallen asleep in her chair when a heavy knock turned her attention to the room's large door that sported intricately carved shields from various long gone baronies.
+Late that evening, Catherine was venting to Rion about the relative drudgery of rebuilding Steadwick.
+She'd just about fallen asleep in her chair when a heavy knock turned her attention to the room's large door that sported intricately carved shields from various long-gone baronies.
 
 The wooden portal flung open before she could spring up, revealing a wide-eyed and panicked guard.
 No words came from the man; whatever haunted him seemed absolute.
@@ -162,15 +162,14 @@ What they saw shocked them, too, and while Catherine's heart sank, she gripped R
 When he looked back at her with a slight wince, she only returned a stony look of resolve.
 
 Danger had come to Steadwick again.
-Overlooking many of the defenseless farmsteads Catherine had in her charge atop a hill in the far distance, a predator swept its gaze like a wolf might hungrily eye sheep.
+Atop a hill in the far distance, overlooking many of the defenseless farmsteads Catherine had in her charge, a predator swept its gaze like a wolf might hungrily eye sheep.
 A magnificently terrifying azure hue wafted from a Ghost Dragon's massive, extended wings like an ethereal heat haze.
-
 
 \textbf{Reverent Allies}
 
-While Catherine trusted her horse, having fought tooth and nail with the battle hardened steed for as long as she could remember, it shuddered in hesitation as they approached the majestic, columned main building of the settlement.
+While Catherine trusted her horse, having fought tooth and nail with the battle-hardened steed for as long as she could remember, it shuddered in hesitation as they approached the majestic, columned main building of the settlement.
 Catherine had also felt the almost unsettling holy power in the area when, suddenly, the sound of rushing wings caught her attention.
-Her gaze snapped upward to catch something approaching. 
+Her gaze snapped upward to catch sight of something approaching. 
 
 The early morning sun was bright, and the figure that swooped low was in front of it.
 The silhouette of wings was visible, and Catherine thought it to be a Gryphon at first.
@@ -197,7 +196,7 @@ The longsword ignited as it left its sheath, and its blazing glory had most of t
 Immediately after, he took to the air and began circling the area again.
 Catherine smiled wide as she watched more angels appear, then looked back to her forces and extended an open palmed arm forward in a command to march.
 
-\textcolor{darkcandyapplered}{Add ``A Few'' Archangels to your army.}
+\textcolor{darkcandyapplered}{Add a Few Archangels to your army.}
 
 \textbf{Bait And Switch}
 
@@ -232,7 +231,7 @@ The necromancer and his strongest forces were not there, and Catherine would hav
 
 \textbf{The Chase Begins}
 
-Catherine huffed in a sweat as the last of the undead fell with wet thuds.
+Catherine huffed, sweat beading on her forehead as the last undead fell with wet thuds.
 Her forces were strong, and simple reanimations weren't the kind of threat to stop them.
 She just hoped… Her stomach churned as her gaze turned back to Steadwick.
 
@@ -244,10 +243,10 @@ Rion quickly caught up to her, his horse panting as hard as he was.
 He began to speak but couldn't find the words as his mind raced.
 Instead, he placed a hand on his queen's shoulder. 
 
-The necromancer had played his opening move, and won.
+The necromancer had played his opening move and won.
 
 Just before Catherine turned to her regrouping forces, she spotted the spectral blue of the real Ghost Dragon in the distance.
-Its work destroying Steadwick's defense had been finished.
+Its work destroying Steadwick's defenses had been finished.
 
 Archangels circled overhead, and Catherine threw her head to the sky, tears welling at the thought of losing what she had worked so hard to build.
 ``Find him!'' she roared, addressing whatever gods were listening as well as the angels above.
