--- a/draft-scenarios/campaigns/castle_sicilian_dragon.tex
+++ b/draft-scenarios/campaigns/castle_sicilian_dragon.tex
@@ -5,9 +5,9 @@
 
 \textbf{Author:} Tyson Heckert
 
-\textbf{Source:} \href{https://travelledtales.com}{Travelled Tales}
+\textbf{Source:} \href{https://travelledtales.com}{travelledtales.com}
 
-\textit{Convinced the only way to save Steadwick is to attack Vhidhax, Catherine powers her small force ahead. 
+\textit{Convinced that the only way to save Steadwick is to attack Vhidhax, Catherine powers her small force ahead. 
 Following the Archangels to a distant, inhospitable land, she must now navigate her way through.}
 
 \subsection*{\MakeUppercase{Scenario length}}
@@ -35,7 +35,7 @@ This Scenario plays out over 10 Rounds.
 
 \textbf{Faction:} Necropolis
 
-\textbf{Enemy Army:} A Pack of Skeletons, A Pack of Zombies, A Pack of Liches, A Few Dread Knights, A Few Ghost Dragons
+\textbf{Enemy Army:} A Pack of Skeletons, a Pack of Zombies, a Pack of Liches, a Few Dread Knights, a Few Ghost Dragons
 
 \textbf{Enemy Deck:} 3 x Might cards, 3 x Magic Cards, 1 x Skill card
 
@@ -136,11 +136,11 @@ During this Castle campaign Scenario, the following rules apply:
 
 \begin{itemize}
 \item All neutral enemies fight using the Neutral Enemy Deck
-\item Each time you visit a trading post, draw the top cards from the \svgunit{bronze} bronze, \svgunit{silver} silver, and \svgunit{golden} golden neutral enemy Decks. 
+\item Each time you visit a Trading Post, draw the top cards from the \svgunit{bronze} bronze, \svgunit{silver} silver, and \svgunit{golden} golden neutral enemy Decks. 
 You may recruit any, or all of them by paying their cost.
 Shuffle any un-hired ones back into their Decks
 \item If the relic is captured, it may be traded in at a trading post for 30 \svgunit{gold}, or \textbf{Search (3)} the relic Deck, twice.
-\item When fighting the enemy at thier town, they have a citadel
+\item When fighting the enemy at thier Town, they have a Citadel
 Don't forget to add the walls and arrow tower to make the battle a siege
 \end{itemize}
 
@@ -164,10 +164,10 @@ Catherine crossed arms and leaned on her saddle horn as she peered out over the 
 The Archangels had gone ahead of the small force she'd scraped together, and she wondered if it had been a mistake to let them go.
 With the enemy stronghold still nowhere in sight, locating it would take time, and the inhospitable landscape would not be kind.
 
-Rion pulled next to her as he finished gulping the last contents of a water pouch.
+Rion pulled up next to her as he finished gulping the last contents of a water pouch.
 He wiped the dribble and sweat from his face before saying anything.
 ``Not the best place to do any fighting.
-Besides the poor conditions, I've heard the locals are known for a particular… ferocity.''
+Besides the poor conditions, I've heard the locals are known for their particular… ferocity.''
 
 ``Well then, we'll just have to bring them to heel,'' Catherine replied coldly.
 The truth was she was more worried about that possibility than she let on, but she had to maintain her composure to protect the image of her strength.
@@ -195,7 +195,7 @@ At least… it was.
 It's damaged, and where the magic in the runes should be strong, even glowing, they're dark, and any power is long decayed.''
 
 Catherine dismounted and slowly inspected the area before saying anything.
-``Some of the damage is recent
+``Some of the damage is recent.
 I can still feel residual heat; the Archangels were here.''
 
 ``How can you be sure? Surely, some would have found us by now and notified us of their progress.''
@@ -210,7 +210,7 @@ Sounds of battle perked the ears of Catherine's forces, and she urged her steed 
 Rounding crags and jagged rocks jutting at all angles, another Obelisk revealed itself with the final moments of a battle taking place around it.
 Several Archangels were on the ground, locked in combat with the remains of a larger undead force.
 
-Approaching at speed, Catherine raised a fist in the air to salute the holy warriors, and several rasped their bronze chestplaces in return.
+Approaching at speed, Catherine raised a fist in the air to salute the holy warriors, and several rasped their bronze chestplates in return.
 
 ``Queen Catherine, you've saved us the trouble of finding you,'' the lead angel said in his deep voice.
 He gestured to the Obelisk with an open palm as the sounds of battle finally died.
@@ -227,7 +227,7 @@ Catherine smiled, reaching to clasp the arm of the angel in thanks for his work.
 She looked back at the ragtag group of forces she'd gathered and hoped it would be enough for a siege.
 
 \begin{itemize}
-  \item \textcolor{darkcandyapplered}{Add ``A Few'' Archangels to your army.}
+  \item \textcolor{darkcandyapplered}{Add a Few Archangels to your army.}
   \item \textcolor{darkcandyapplered}{You may now teleport to the enemy town on Tile S1.
   If you choose not to, you may in the future by spending one movement at this Obelisk.}
 \end{itemize}
@@ -236,7 +236,7 @@ She looked back at the ragtag group of forces she'd gathered and hoped it would 
 \textbf{The Escape}
 
 With the thick, macabre, almost demonic-looking walls breached and the bulk of the necromancer's forces slain, the castle belonged to Catherine.
-It was an eye for an eye, and she relished driving the final blow into the last enemy ranks still in the courtyard herself. 
+It was an eye for an eye, and she relished driving the final blow into the last enemy ranks still in the courtyard herself.
 
 Unfortunately, after a frantic search of the grounds, Vhidhax himself was nowhere in sight.
 Catherine raced up the walls just in time to peer over the side and catch sight of the necromancer fleeing with a sizable retinue that had quietly slipped away during the battle.
@@ -245,7 +245,7 @@ Catherine's campaign wasn't finished yet.
 
 Catherine turned to observe the battlefield from above.
 The butcher's bill had been large.
-Both fresh and long decaying bodies lay strewn about, several Archangels among them.
+Both fresh and long-decaying bodies lay strewn about, several Archangels among them.
 Rion caught up with her a minute later, and the two exchanged looks of exhaustion.
 
 ``It's done,'' Rion said through panting breaths.
