--- a/draft-scenarios/campaigns/castle_two_knights_defense.tex
+++ b/draft-scenarios/campaigns/castle_two_knights_defense.tex
@@ -5,9 +5,9 @@
 
 \textbf{Author:} Tyson Heckert
 
-\textbf{Source:} \href{https://travelledtales.com}{Travelled Tales}
+\textbf{Source:} \href{https://travelledtales.com}{travelledtales.com}
 
-\textit{With Vhidhax's stronghold in her grasp, Catherine needs to discover and halt the necromancers next move.}
+\textit{With Vhidhax's stronghold in her grasp, Catherine needs to discover and halt the necromancer's next move.}
 
 \subsection*{\MakeUppercase{Scenario length}}
 
@@ -34,7 +34,7 @@ This Scenario plays out over 8 Rounds.
 
 \textbf{Faction:} Necropolis
 
-\textbf{Enemy Army:} A Pack of Skeletons, A Pack of Zombies, A Pack of Liches, A Pack of Dread Knights
+\textbf{Enemy Army:} A Pack of Skeletons, a Pack of Zombies, a Pack of Liches, a Pack of Dread Knights
 
 \textbf{Enemy Deck:} 3 x Might cards, 3 x Magic Cards, 1 x Skill card
 
@@ -110,12 +110,12 @@ During this Castle campaign Scenario, the following rules apply:
 
 \begin{itemize}
   \item The Glory of Erathia building is unavailable
-  \item Each time you visit a trading post, draw the top cards from the \svgunit{bronze} bronze, \svgunit{silver} silver, and \svgunit{golden} golden neutral enemy Decks.
+  \item Each time you visit a Trading Post, draw the top cards from the \svgunit{bronze} bronze, \svgunit{silver} silver, and \svgunit{golden} golden neutral enemy Decks.
   You may recruit any, or all of them by paying their cost.
   Shuffle any un-hired ones back into their Decks
   \item After defeating the neutral army at the Dragon Utopia, add a random dragon from the \svgunit{azure} Azure neutral Deck to your army
   \item The enemy army follows the normal AI movement rules, stopping to capture Settlements and Mines, with its ultimate goal to reach the Dragon Utopia
-  \item If the enemy army reaches the Dragon Utopia before you do, flip the ``Pack'' side of Dread Knights to ``Few'' and add ``A Pack'' of Ghost Dragons
+  \item If the enemy army reaches the Dragon Utopia before you do, flip the Pack side of Dread Knights to Few and add a Pack of Ghost Dragons
 \end{itemize}
 
 \begin{tikzpicture}[overlay]
@@ -150,7 +150,7 @@ She frowned at the thought of her weakened enemy being able to defeat the dragon
 But if he did… If she missed something, he would have newfound strength enough to overpower her battered forces.
 She clenched her fist, crushing the frail paper to dust before rushing to the doorway to gather who she could.
 
-To her surprise, the necropolis' courtyard was a buzz of energy.
+To her surprise, the necropolis' courtyard was abuzz with energy.
 She placed her hands on the overlook's railing and peered over the edge to spy a host of knights in the color and flair of various baronies. 
 
 Rion came rushing up to her a moment later, intent on delivering news of their new guests.
@@ -161,15 +161,15 @@ The knights spent days tracking and catching up to us, and they mean to join us 
 Catherine smiled wide.
 ``Then tell them to get ready; the race is on.''
 
-\textcolor{darkcandyapplered}{Add ``A Few'' Champions to your army.}
+\textcolor{darkcandyapplered}{Add a Few Champions to your army.}
 
 \textbf{Checkmate}
 
 The broken remains of Vhidhax looked no grander than any of his many minions.
-Necromantic energy stripped the flesh from him long ago; without that power, his presence and ill-willed malevolence were gone as well.
+Necromantic energy had stripped the flesh from him long ago; without that power, his presence and ill-willed malevolence were gone as well.
 
 Catherine wiped blood, sweat, and dirt from her face.
-Rion had been right; the necromancer was not her father, but perhaps his slaying would ease the sting of her family discourse and the sting of betrayal, at least a little.
+Rion had been right; the necromancer was not her father, but perhaps his slaying would ease the sting of her family discord and the sting of betrayal, at least a little.
 
 Rion approached, and Catherine turned before embracing him in a rare moment of emotion.
 The last time he'd seen his queen like this was when they were in Steadwick together, and he looked a little embarrassed as he was lost for words.
@@ -235,7 +235,7 @@ Caution had won her the day, but she wondered if it was enough.
 Would actions like this cause her downfall one day?
 
 Home felt distant in the haze of fury that Catherine had been prisoner to.
-As she trot past the remains of those that had fought for her, her heart swelled with emotion.
+As she trotted past the remains of those who had fought for her, her heart swelled with emotion.
 It was war, and loss was inevitable.
 She turned to the remaining few and threw a weak hand forward out of the badlands.
 It was time to pick up the pieces.
