--- a/draft-scenarios/clash/arcane_artillery.tex
+++ b/draft-scenarios/clash/arcane_artillery.tex
@@ -8,7 +8,7 @@
 \textbf{Source:} \href{https://discord.com/channels/740870068178649108/1279029213839626313}{Archon Studios Discord}
 
 \textit{The ancient ruins are filled with arcane magic and technology, we must take control of them before our enemies can.
-Some pieces of arcane artillery are scattered around the ruins, they can help us kill the dragons resting in them.}
+Some pieces of arcane artillery are scattered aRound the ruins, they can help us kill the dragons resting in them.}
 
 \subsection*{\MakeUppercase{Scenario Length}}
 This Scenario is played over 12 Rounds.
@@ -22,10 +22,10 @@ This Scenario is played over 12 Rounds.
 
 \textbf{Starting Units:}
 \begin{itemize}
-  \item a Few of each \svgunit{bronze} Unit
+  \item a Few of each \svgUnit{bronze} Unit
 \end{itemize}
 
-\textbf{Town Buildings:} \svgunit{bronze} Dwelling
+\textbf{Town Buildings:} \svgUnit{bronze} Dwelling
 
 \textbf{Map Tile Pool:} Each player takes 1 random Far (II--III) Map Tile, it must contain a Settlement
 
@@ -95,7 +95,7 @@ During this Scenario:
 \begin{itemize}
   \item Heroes cannot enter starting Tiles other than their own.
   \item A player may not use the Diplomacy card to skip Combat on the Dragon Utopia Field.
-  \item Arcane Spikes are represented by cubes not used by any player's faction.
+  \item Arcane Spikes are represented by cubes not used by any player's Faction.
 \end{itemize}
 
 \vspace*{\fill}
@@ -118,7 +118,7 @@ During this Scenario:
 \hommtable[]{15}{
   \begin{tabularx}{\linewidth}{X}
   \darkcell{\raisebox{-.2\height}{} \textbf{Activation Ability: Arcane Artillery}}\\
-  \lightcell[4.8]{\raisebox{-.25\height}{} \includegraphics[height=10px]{\layout/listdot.png} Deal 1 \svg{damage-table} to target Unit by placing an Arcane Spike on it. \\ \includegraphics[height=10px]{\layout/listdot.png} Arcane artillery ignores the Azure Dragon's special ability. \\ \includegraphics[height=10px]{\layout/listdot.png} Arcane artillery does not count toward combat round spell limit. \\ \includegraphics[height=10px]{\layout/listdot.png} Arcane artillery is considered to be a spell of every school of magic. \\ \includegraphics[height=10px]{\layout/listdot.png} Players may cast Arcane Artillery when an opponent is in combat with neutral units, on the neutral units turn. \\ \includegraphics[height=10px]{\layout/listdot.png} Each player may only cast Arcane Artillery once per combat round. \\ \includegraphics[height=10px]{\layout/listdot.png} If playing Alliance mode, allies may cast Arcane Artillery on allied player's unit activation.} \\
+  \lightcell[4.8]{\raisebox{-.25\height}{} \includegraphics[height=10px]{\layout/listdot.png} Deal 1 \svg{damage-table} to target Unit by placing an Arcane Spike on it. \\ \includegraphics[height=10px]{\layout/listdot.png} Arcane artillery ignores the Azure Dragon's special ability. \\ \includegraphics[height=10px]{\layout/listdot.png} Arcane artillery does not count toward combat Round spell limit. \\ \includegraphics[height=10px]{\layout/listdot.png} Arcane artillery is considered to be a spell of every school of magic. \\ \includegraphics[height=10px]{\layout/listdot.png} Players may cast Arcane Artillery when an opponent is in combat with neutral Units, on the neutral Units turn. \\ \includegraphics[height=10px]{\layout/listdot.png} Each player may only cast Arcane Artillery once per combat Round. \\ \includegraphics[height=10px]{\layout/listdot.png} If playing Alliance mode, allies may cast Arcane Artillery on allied player's Unit activation.} \\
   \end{tabularx}
 }
 
