--- a/draft-scenarios/clash/arcane_artillery.tex
+++ b/draft-scenarios/clash/arcane_artillery.tex
@@ -1,5 +1,5 @@
 % !TeX spellcheck = en_US
-\addscenariosection{1}{Clash Scenario}{Arcane Artillery}{\images/berserk.png}
+\addscenariosection{1}{Clash Scenario}{Arcane Artillery}{\images/precision.png}
 
 \begin{multicols}{2}
 
@@ -22,15 +22,19 @@ This Scenario is played over 12 Rounds.
 
 \textbf{Starting Units:}
 \begin{itemize}
-  \item a Few of each \svgUnit{bronze} Unit
+  \item a Few of each \svgunit{bronze} Unit
 \end{itemize}
 
-\textbf{Town Buildings:} \svgUnit{bronze} Dwelling
+\textbf{Town Buildings:} \svgunit{bronze} Dwelling
 
 \textbf{Map Tile Pool:} Each player takes 1 random Far (II--III) Map Tile, it must contain a Settlement
 
 \subsection*{\MakeUppercase{Map Setup}}
 Take the following Map Tiles and arrange them as shown in the Scenario map layout:
+
+\begin{itemize}
+  \item If playing Alliance mode, alternate starting Tile placement such that allies do not start adjacent to each other.
+\end{itemize}
 
 \textbf{For a 2-player Scenario:}
 \begin{itemize}
@@ -39,38 +43,15 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
   \item 1 × Center (VI--VII) Map Tile, which must contain the Dragon Utopia Field
 \end{itemize}
 
-\textbf{For a 3-player Scenario:}
+\textbf{For a 3-6 player Scenario:}
 \begin{itemize}
-  \item 3 × Starting (I) Map Tile
+  \item P × Starting (I) Map Tile
   \item 6 × Near (IV--V) Map Tile that contains an Obelisk. If not enough are available, treat Witch Huts as Obelisks
-  \item 1 × Center (VI--VII) Map Tile, which must contain the Dragon Utopia Field
-\end{itemize}
-
-\textbf{For a 4-player Scenario:}
-\begin{itemize}
-  \item 4 × Starting (I) Map Tile
-  \item 6 × Near (IV--V) Map Tile that contains an Obelisk. If not enough are available, treat Witch Huts as Obelisks
-  \item 1 × Center (VI--VII) Map Tile, which must contain the Dragon Utopia Field
-\end{itemize}
-
-\textbf{For a 5-player Scenario:}
-\begin{itemize}
-  \item 5 × Starting (I) Map Tile
-  \item 6 × Near (IV--V) Map Tile that contains an Obelisk. If not enough are available, treat Witch Huts as Obelisks
-  \item 1 × Center (VI--VII) Map Tile, which must contain the Dragon Utopia Field
-\end{itemize}
-
-\textbf{For a 6-player Scenario:}
-\begin{itemize}
-  \item 6 × Starting (I) Map Tile
-  \item 6 × Near (IV--V) Map Tile
   \item 1 × Center (VI--VII) Map Tile, which must contain the Dragon Utopia Field
 \end{itemize}
 
 \subsection*{\MakeUppercase{Victory Conditions}}
 To win the Scenario, a Hero must Flag the Dragon Utopia Field.
-
-\vspace*{\fill}
 
 \subsection*{\MakeUppercase{Defeat Conditions}}
 At the end of the \nth{12} Round, if there is no winner, all players lose the Scenario.
@@ -84,43 +65,48 @@ At the end of the \nth{12} Round, if there is no winner, all players lose the Sc
 
 \subsection*{\MakeUppercase{Additional Rules}}
 
-Before the start of this Scenario:
-
-\begin{itemize}
-  \item If playing Alliance mode, allies and oppoents choose starting Tiles alternately.
-\end{itemize}
-
 During this Scenario:
 
 \begin{itemize}
   \item Heroes cannot enter starting Tiles other than their own.
-  \item A player may not use the Diplomacy card to skip Combat on the Dragon Utopia Field.
+  \item A Player may not use the Diplomacy card to skip Combat on the Dragon Utopia Field.
   \item Arcane Spikes are represented by cubes not used by any player's Faction.
+  \item Obelisks may be Flagged. 
+  \item Each Obelisk can only be Flagged by one Player at a time.
+  \item When first Flagged, that Player gains one Arcane Spike.
+  \item At the start of each Player's turn, that Player removes any unspent Arcane Spikes, then gains Arcane Spikes equal to the number of captured Obelisks they have.
 \end{itemize}
+
+\vspace{1em}
+
+\includegraphics[width=\linewidth, keepaspectratio]{\art/prayer.png}
 
 \vspace*{\fill}
 
 \columnbreak
 
-\begin{itemize}
-    \item Obelisks may be captured. The first time an Obelisk is captured, gain one Arcane Spike.
-    \item At the start of each player's turn, that player removes any unspent Arcane Spikes, then gains Arcane Spikes equal to the number of captured Obelisks they have.
-\end{itemize}
-
-\vspace{1em}
-
-\includegraphics[width=\linewidth, keepaspectratio]{\art/griffin.png}
-
-\end{multicols}
-
-\vspace{1em}
+\textbf{Players can spend one Arcane Spike during combat to cast:}
 
 \hommtable[]{15}{
   \begin{tabularx}{\linewidth}{X}
-  \darkcell{\raisebox{-.2\height}{} \textbf{Activation Ability: Arcane Artillery}}\\
-  \lightcell[4.8]{\raisebox{-.25\height}{} \includegraphics[height=10px]{\layout/listdot.png} Deal 1 \svg{damage-table} to target Unit by placing an Arcane Spike on it. \\ \includegraphics[height=10px]{\layout/listdot.png} Arcane artillery ignores the Azure Dragon's special ability. \\ \includegraphics[height=10px]{\layout/listdot.png} Arcane artillery does not count toward combat Round spell limit. \\ \includegraphics[height=10px]{\layout/listdot.png} Arcane artillery is considered to be a spell of every school of magic. \\ \includegraphics[height=10px]{\layout/listdot.png} Players may cast Arcane Artillery when an opponent is in combat with neutral Units, on the neutral Units turn. \\ \includegraphics[height=10px]{\layout/listdot.png} Each player may only cast Arcane Artillery once per combat Round. \\ \includegraphics[height=10px]{\layout/listdot.png} If playing Alliance mode, allies may cast Arcane Artillery on allied player's Unit activation.} \\
+    \darkcell{\raisebox{-.2\height}{} \textbf{Arcane Artillery}}\\
+    \lightcell[1.8]{\raisebox{-.25\height}{\svg{activation_white}} Deal 1 \svg{damage-table} to target Unit by placing an Arcane Spike on it.} \\ 
+    \lightcell[3.8]{\raisebox{-.25\height}{\svg{ongoing_white}} A Unit with an Arcane Spike placed on it has its special ability negated \\ and receives +1 \svg{damage-table} from every source of \\ \svg{damage-table} and attacks for every Arcane Spike placed on them (even if they were to receive 0 damage)} \\
   \end{tabularx}
 }
+
+\textbf{Additionally:}
+
+\begin{itemize}
+  \item Arcane Artillery ignores Azure Dragon's Special Ability when cast during level VII combat.
+  \item Arcane Artillery does not count toward your combat Round Spell limit.
+  \item Arcane Artillery is considered to be a Spell of every school of magic of \svg{empower} 0
+  \item Players can cast Srcane Srtillery during combat involving opponent's Heroes during the neutral unit's activation
+  \item Each player can cast only one Arcane Artillery per combat round
+  \item \textit{In alliance mode, allies can cast Arcane Artillery on allied Unit's activation}
+\end{itemize}
+
+\end{multicols}
 
 \newpage
 
