--- a/draft-scenarios/clash/arcane_artillery.tex
+++ b/draft-scenarios/clash/arcane_artillery.tex
@@ -98,12 +98,12 @@ During this Scenario:
 \textbf{Additionally:}
 
 \begin{itemize}
-  \item Arcane Artillery ignores Azure Dragon's Special Ability when cast during level VII combat.
+  \item Arcane Artillery ignores Azure Dragon's Special Ability when cast during Level VII combat.
   \item Arcane Artillery does not count toward your combat Round Spell limit.
-  \item Arcane Artillery is considered to be a Spell of every school of magic of \svg{empower} 0
-  \item Players can cast Srcane Srtillery during combat involving opponent's Heroes during the neutral unit's activation
-  \item Each player can cast only one Arcane Artillery per combat round
-  \item \textit{In alliance mode, allies can cast Arcane Artillery on allied Unit's activation}
+  \item Arcane Artillery is considered to be a Spell of every school of magic of \svg{empower} 0.
+  \item Players can cast Srcane Srtillery during combat involving opponent's Heroes during the neutral Unit's activation.
+  \item Each player can cast only one Arcane Artillery per combat Round.
+  \item \textit{In alliance mode, allies can cast Arcane Artillery on allied Unit's activation.}
 \end{itemize}
 
 \end{multicols}
