updates per code review

--- a/draft-scenarios/clash/arcane_artillery.tex
+++ b/draft-scenarios/clash/arcane_artillery.tex
@@ -8,13 +8,13 @@
 \textbf{Source:} \href{https://discord.com/channels/740870068178649108/1279029213839626313}{Archon Studios Discord}
 
 \textit{The ancient ruins are filled with arcane magic and technology, we must take control of them before our enemies can.
-Some pieces of arcane artillery are scattered aRound the ruins, they can help us kill the dragons resting in them.}
+Some pieces of arcane artillery are scattered around the ruins, they can help us kill the dragons resting in them.}
 
 \subsection*{\MakeUppercase{Scenario Length}}
 This Scenario is played over 12 Rounds.
 
 \subsection*{\MakeUppercase{Player Setup}}
-\textbf{Player Count:} 2-6 Player FFA or 2vs2, 2vs2vs2, 3vs3 Alliance
+\textbf{Player Count:} 2--6 Player FFA or 2vs2, 2vs2vs2, 3vs3 Alliance
 
 \textbf{Starting Resources:} 10 \svg{gold}, 6 \svg{building_materials}, 1 \svg{valuables}
 
@@ -51,16 +51,20 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
 \end{itemize}
 
 \subsection*{\MakeUppercase{Victory Conditions}}
-To win the Scenario, a Hero must Flag the Dragon Utopia Field.
+First Player to flag Dragon Utopia wins the Scenario.
 
 \subsection*{\MakeUppercase{Defeat Conditions}}
-At the end of the \nth{12} Round, if there is no winner, all players lose the Scenario.
+At the end of the \nth{12} Round, if the Dragon Utopia is not flagged by any player, all players lose the Scenario.
+
+\begin{center}
+\includegraphics[width=0.55\linewidth, keepaspectratio]{\art/prayer.png}
+\end{center}
 
 \subsection*{\MakeUppercase{Timed Events}}
 
 \textbf{\nth{6} Round:}
 \begin{itemize}
-  \item Remove all Black cubes from every Tile.
+  \item Remove all Black Cubes from every Tile.
 \end{itemize}
 
 \subsection*{\MakeUppercase{Additional Rules}}
@@ -69,39 +73,34 @@ During this Scenario:
 
 \begin{itemize}
   \item Heroes cannot enter starting Tiles other than their own.
-  \item A Player may not use the Diplomacy card to skip Combat on the Dragon Utopia Field.
-  \item Arcane Spikes are represented by cubes not used by any player's Faction.
-  \item Obelisks may be Flagged. 
+  \item A Player may not use the Diplomacy Card to skip Combat on the Dragon Utopia Field.
+  \item Arcane Spikes are represented by Cubes not used by any player's Faction.
   \item Each Obelisk can only be Flagged by one Player at a time.
-  \item When first Flagged, that Player gains one Arcane Spike.
-  \item At the start of each Player's turn, that Player removes any unspent Arcane Spikes, then gains Arcane Spikes equal to the number of captured Obelisks they have.
+  \item Whenever an Obelisk is visited for the first time, the visiting player gains one Arcane Spike.
+  \item At the start of each Player's turn, that Player removes any unspent Arcane Spikes, then gains Arcane Spikes equal to the number of Obelisks controlled by them.
 \end{itemize}
 
-\vspace{1em}
+\vspace{3em}
 
-\includegraphics[width=\linewidth, keepaspectratio]{\art/prayer.png}
-
-\vspace*{\fill}
-
-\columnbreak
+\includegraphics[width=0.9\linewidth, keepaspectratio]{\art/ballista.png}
 
 \textbf{Players can spend one Arcane Spike during combat to cast:}
 
 \hommtable[]{15}{
   \begin{tabularx}{\linewidth}{X}
     \darkcell{\raisebox{-.2\height}{} \textbf{Arcane Artillery}}\\
-    \lightcell[1.8]{\raisebox{-.25\height}{\svg{activation_white}} Deal 1 \svg{damage-table} to target Unit by placing an Arcane Spike on it.} \\ 
-    \lightcell[3.8]{\raisebox{-.25\height}{\svg{ongoing_white}} A Unit with an Arcane Spike placed on it has its special ability negated \\ and receives +1 \svg{damage-table} from every source of \\ \svg{damage-table} and attacks for every Arcane Spike placed on them (even if they were to receive 0 damage)} \\
+    \lightcell[1.8]{\raisebox{-.25\height}{\svg{activation-table}} Deal 1 \svg{damage-table} to target Unit by placing an Arcane Spike on it.} \\ 
+    \lightcell[3.8]{\raisebox{-.25\height}{\svg{ongoing-table}} A Unit with an Arcane Spike placed on it has its special ability negated \\ and receives +1 \svg{damage-table} from every source of \\ \svg{damage-table} and attacks for every Arcane Spike placed on them (even if they were to receive 0 damage)} \\
   \end{tabularx}
 }
 
 \textbf{Additionally:}
 
 \begin{itemize}
-  \item Arcane Artillery ignores Azure Dragon's Special Ability when cast during \textbf{Level VII} combat.
-  \item Arcane Artillery does not count toward your combat Round Spell limit.
   \item Arcane Artillery is considered to be a Spell of every school of magic of \svg{empower} 0.
-  \item Players can cast Srcane Srtillery during combat involving opponent's Heroes \textbf{during the neutral Unit's activation}.
+  \item Arcane Artillery does not count toward your combat Round Spell limit.
+  \item Arcane Artillery ignores Azure Dragon's Special Ability when cast during \textbf{Level VII} combat.
+  \item Players can cast Arcane Artillery during combat involving opponent's Heroes \textbf{during the neutral Unit's activation}.
   \item Each player can cast only \textbf{one Arcane Artillery per combat Round}.
   \item \textit{In alliance mode, allies can cast Arcane Artillery on allied Unit's activation.}
 \end{itemize}
