minor changes to rules per player feedback

--- a/draft-scenarios/campaigns/castle_greek_gift.tex
+++ b/draft-scenarios/campaigns/castle_greek_gift.tex
@@ -39,9 +39,9 @@ This Scenario plays out over 8 Rounds.
 
 \textbf{Enemy Army:} A Pack of Skeletons, a Pack of Zombies, a Few Dread Knights, a Few Ghost Dragons
 
-\textbf{Enemy Deck:} 4 x Might cards
+\textbf{Enemy Deck:} 4 x Might Cards
 
-\textbf{Special:} Place the Cloak of the Undead King IV and VI cards aside
+\textbf{Special:} Place the Cloak of the Undead King IV and VI Cards aside
 
 \subsection*{\MakeUppercase{Map setup}}
 
