--- a/draft-scenarios/campaigns/castle_sicilian_dragon.tex
+++ b/draft-scenarios/campaigns/castle_sicilian_dragon.tex
@@ -12,24 +12,23 @@ Following the Archangels to a distant, inhospitable land, she must now navigate 
 
 \subsection*{\MakeUppercase{Scenario length}}
 
-This Scenario plays out over 10 Rounds.
+This Scenario plays out over 11 Rounds.
 
 \subsection*{\MakeUppercase{Player setup}}
 
 \textbf{Faction:} Castle
 
-\textbf{Faction Hero:} The same Hero you played in Scenario 1
+\textbf{Faction Hero:} The same Hero as Scenario 1
 
 \textbf{Starting Resources:} The resources you ended with in Scenario 1
 
 \textbf{Starting Income:} 10 \svg{gold}, 0 \svg{building_materials}, 0 \svg{valuables}
 
-\textbf{Starting Units:}
-\begin{itemize}
-  \item The army you ended with in Scenario 1
-\end{itemize}
+\textbf{Starting Units:} The army you ended with in Scenario 1
 
 \textbf{Town Buildings:} None
+
+\textbf{Bonus:} Begin the scenario at Hero Level 2, but do not take new Ability Cards.
 
 \subsection*{\MakeUppercase{AI Hero setup}}
 
@@ -37,13 +36,13 @@ This Scenario plays out over 10 Rounds.
 
 \textbf{Enemy Army:} A Pack of Skeletons, a Pack of Zombies, a Pack of Liches, a Few Dread Knights, a Few Ghost Dragons
 
-\textbf{Enemy Deck:} 3 x Might cards, 3 x Magic Cards, 1 x Skill card
+\textbf{Enemy Deck:} 3 x Might Cards, 3 x Magic Cards, 1 x Skill Card
 
 \textbf{Enemy Spells:} 2 x Lightning Bolt, 1 x Curse
 
-\textbf{Enemy Skills:} Cloak of the Undead King IV and VI, the enemy will play whichever is possible at the time
+\textbf{Enemy Skills:} Cloak of the Undead King IV and VI, the enemy will play whichever it can
 
-\textbf{Neutral Enemy Deck:} 4 x Might cards
+\textbf{Neutral Enemy Deck:} 4 x Might Cards
 
 \subsection*{\MakeUppercase{Map setup}}
 
@@ -89,7 +88,7 @@ Place a Necropolis Hero on the center Field of the S1 Necropolis Tile.
 \subsection*{\MakeUppercase{Defeat Conditions}}
 \begin{itemize}
   \item You lose one combat encounter
-  \item You run out of time at the end of the 10th Round
+  \item You run out of time at the end of the 11th Round
 \end{itemize}
 
 \end{multicols*}
@@ -136,10 +135,10 @@ During this Castle campaign Scenario, the following rules apply:
 
 \begin{itemize}
 \item All neutral enemies fight using the Neutral Enemy Deck
-\item Each time you visit a Trading Post, draw the top cards from the \svgunit{bronze} bronze, \svgunit{silver} silver, and \svgunit{golden} golden neutral enemy Decks. 
+\item Each time you visit a Trading Post, draw the top Cards from the \svgunit{bronze} bronze, \svgunit{silver} silver, and \svgunit{golden} golden neutral enemy Decks. 
 You may recruit any, or all of them by paying their cost.
 Shuffle any un-hired ones back into their Decks
-\item If the relic is captured, it may be traded in at a trading post for 30 \svgunit{gold}, or \textbf{Search (3)} the relic Deck, twice.
+\item The Grail may be sold at a trading post for 30 \svgunit{gold} \textit{or} \textbf{Search (3)} the relic Deck, twice.
 \item When fighting the enemy at thier Town, they have a Citadel
 Don't forget to add the walls and arrow tower to make the battle a siege
 \end{itemize}
