--- a/draft-scenarios/campaigns/castle_sicilian_dragon.tex
+++ b/draft-scenarios/campaigns/castle_sicilian_dragon.tex
@@ -28,7 +28,7 @@ This Scenario plays out over 11 Rounds.
 
 \textbf{Town Buildings:} None
 
-\textbf{Bonus:} Begin the scenario at Hero Level 2, but do not take new Ability Cards.
+\textbf{Bonus:} Begin the Scenario at Hero Level 2, but do not take new Ability Cards.
 
 \subsection*{\MakeUppercase{AI Hero setup}}
 
