--- a/draft-scenarios/campaigns/castle_two_knights_defense.tex
+++ b/draft-scenarios/campaigns/castle_two_knights_defense.tex
@@ -27,7 +27,7 @@ This Scenario plays out over 8 Rounds.
 
 \textbf{Town Buildings:} \svgunit{bronze} Dwelling, \svgunit{silver} Dwelling, Citadel
 
-\textbf{Bonus:} Begin the scenario at Hero Level 3, but do not take new Ability Cards.
+\textbf{Bonus:} Begin the Scenario at Hero Level 3, but do not take new Ability Cards.
 
 \subsection*{\MakeUppercase{AI Hero setup}}
 
