--- a/draft-scenarios/campaigns/castle_two_knights_defense.tex
+++ b/draft-scenarios/campaigns/castle_two_knights_defense.tex
@@ -23,12 +23,11 @@ This Scenario plays out over 8 Rounds.
 
 \textbf{Starting Income:} 10 \svg{gold}, 0 \svg{building_materials}, 0 \svg{valuables}
 
-\textbf{Starting Units:}
-\begin{itemize}
-  \item The army you ended Scenario 2 with
-\end{itemize}
+\textbf{Starting Units:} The army you ended Scenario 2 with
 
 \textbf{Town Buildings:} \svgunit{bronze} Dwelling, \svgunit{silver} Dwelling, Citadel
+
+\textbf{Bonus:} Begin the Scenario at Hero Level 3, but do not take new Ability Cards.
 
 \subsection*{\MakeUppercase{AI Hero setup}}
 
@@ -36,11 +35,11 @@ This Scenario plays out over 8 Rounds.
 
 \textbf{Enemy Army:} A Pack of Skeletons, a Pack of Zombies, a Pack of Liches, a Pack of Dread Knights
 
-\textbf{Enemy Deck:} 3 x Might cards, 3 x Magic Cards, 1 x Skill card
+\textbf{Enemy Deck:} 3 x Might Cards, 3 x Magic Cards, 1 x Skill Card
 
 \textbf{Enemy Spells:} 2 x Lightning Bolt, 1 x Curse
 
-\textbf{Enemy Skills:} Cloak of the Undead King IV and VI, the enemy will play whichever is possible at the time
+\textbf{Enemy Skills:} Cloak of the Undead King IV and VI, the enemy will play whichever it can
 
 \subsection*{\MakeUppercase{Map setup}}
 
@@ -110,7 +109,7 @@ During this Castle campaign Scenario, the following rules apply:
 
 \begin{itemize}
   \item The Glory of Erathia building is unavailable
-  \item Each time you visit a Trading Post, draw the top cards from the \svgunit{bronze} bronze, \svgunit{silver} silver, and \svgunit{golden} golden neutral enemy Decks.
+  \item Each time you visit a Trading Post, draw the top Cards from the \svgunit{bronze} bronze, \svgunit{silver} silver, and \svgunit{golden} golden neutral enemy Decks.
   You may recruit any, or all of them by paying their cost.
   Shuffle any un-hired ones back into their Decks
   \item After defeating the neutral army at the Dragon Utopia, add a random dragon from the \svgunit{azure} Azure neutral Deck to your army
@@ -179,9 +178,9 @@ Rion thought she looked much older and weathered from the ordeal, but he was hap
 Her duty fulfilled and her seat secure, Catherine would see Steadwick rebuilt with Erathia just a little safer… for now.
 
 \begin{itemize}
-    \item \textcolor{darkcandyapplered}{If you have not been to the Dragon Utopia, read ``A Queen's Right''}
+    \item \textcolor{darkcandyapplered}{If neither you or the enemy reached the Dragon Utopia, read ``A Queen's Right''}
     \item \textcolor{darkcandyapplered}{If the enemy army reached the Dragon Utopia before being defeated, read ``A Queen's Lament''}
-    \item \textcolor{darkcandyapplered}{If you reached the Dragon Utopia first, defeating the dragons within, read ``A Queen's Fury''}
+    \item \textcolor{darkcandyapplered}{If you reached the Dragon Utopia and defeated the dragons within before defeating the enemy, read ``A Queen's Fury''}
 \end{itemize}
 
 \textbf{A Queen's Fury}
