--- a/campaigns/inferno_deal_with_the_devil.tex
+++ b/campaigns/inferno_deal_with_the_devil.tex
@@ -54,24 +54,24 @@ This Scenario plays out over 14 Rounds.
 
 \textbf{Castle Charging Army \#2:} A Pack of Halberdiers, a Few Griffins, a Few Crusaders, a Pack of Zealots, a Pack of Champions
 
-\textbf{Charging Armies \#1 and \#2 Deck:} 3 × Might card, 2 × Skill card
+\textbf{Charging Armies \#1 and \#2 Deck:} 3 × Might Card, 2 × Skill Card
 
-\textbf{Charging Armies \#1 and \#2 Skill Deck:} 1 × ``Shield of the Damned'' Artifact card, 1 × ``Sword of Hellfire'' Artifact card
+\textbf{Charging Armies \#1 and \#2 Skill Deck:} 1 × ``Shield of the Damned'' Artifact Card, 1 × ``Sword of Hellfire'' Artifact Card
 
 \textbf{Final Charging Army:} A Pack of Griffins, a Pack of Zealots, a Pack of Champions, a Pack of Unicorns, a Few Archangels, a ``Ballista'' war machine
 
-\textbf{Final Charging Army Deck:} 3 × Might card, 3 × Skill card
+\textbf{Final Charging Army Deck:} 3 × Might Card, 3 × Skill Card
 
-\textbf{Final Charging Army Skill/Ability Deck:} 1 × ``Shield of the Damned'' Artifact card, 1 × ``Sword of Hellfire'' Artifact card,
-  1 × ``Ballistics'' Ability card (at Basic effect), 1 × ``First Aid'' Ability card (at Expert effect)
+\textbf{Final Charging Army Skill/Ability Deck:} 1 × ``Shield of the Damned'' Artifact Card, 1 × ``Sword of Hellfire'' Artifact Card,
+  1 × ``Ballistics'' Ability Card (at Basic effect), 1 × ``First Aid'' Ability Card (at Expert effect)
 
 Charging Armies \#1 and \#2 use the same AI Deck and Skill Deck. Reshuffle both Decks after Combat.
 
-Both Artifact cards of all Charging Armies are treated as Skills, and use the top ``less powerful'' effect on the card.
-The ``Sword of Hellfire'' will be used in attacks and retaliation attacks. It is not used when attacking Walls or Gates,
-and remains in effect on the Unit. If ``Shield of the Damned'' is drawn, it takes effect when
-any Charging Army Unit takes attack or retaliation damage. If the AI Skill card advises ``do it again'', the Artifact
-cards are not played again immediately, but instead are played as soon as the next Unit is able to use them.
+Both Artifact Cards of all Charging Armies are treated as Skills, and use the top ``less powerful'' effect on the Card.
+The ``Sword of Hellfire'' will be used in attacks and retaliation attacks.
+It is not used when attacking Walls or Gates, and remains in effect on the Unit.
+If ``Shield of the Damned'' is drawn, it takes effect when any Charging Army Unit takes attack or retaliation damage.
+If the AI Skill Card advises ``do it again'', the Artifact Cards are not played again immediately, but instead are played as soon as the next Unit is able to use them.
 
 \subsection*{\MakeUppercase{Map Setup}}
 
@@ -180,7 +180,7 @@ During this ``Inferno'' Campaign Scenario, the following rules apply:
   \item If an Enemy Charging Hero enters a Map Tile or Field that your Main Hero is on (exception is if you are in
     your Inferno city Kleesive), or if a charging Hero attacks Kleesive and you are not present in your city
     of Kleesive, you are immediately transported back to Kleesive, you lose any remaining Movement Points
-    you have, lose 3 \svg{gold}, gain \svg{morale_negative}, and randomly discard 1 card from your hand.
+    you have, lose 3 \svg{gold}, gain \svg{morale_negative}, and randomly discard 1 Card from your hand.
   \item Enemy Charging Heroes move only 2 MPs. The Final Charging Army moves 4 MPs. They take the shortest
     route to Kleesive. If you own a Mine in a Map Tile they enter, they will capture the Mine (but will not
     ``backtrack'' to do so), and then continue along the shortest route to Kleesive. They ignore everything
