--- a/campaigns/inferno_devilish_plan.tex
+++ b/campaigns/inferno_devilish_plan.tex
@@ -55,11 +55,11 @@ This Scenario plays out over 13 Rounds.
   \item \textbf{Ivor's Army:} A Few Elves\footnote{In Round 9, the Few Elves in Ivor's Army are Reinforced to a Pack of Elves.}, Neutral Army at the same Level as your Hero\footnote{See page 35, ``Field Difficulty Level Table'' in the Core Rulebook, for further details on the number of Neutral Units you have to draw for this Neutral Army.}
 \end{itemize}
 
-\textbf{Ivor's Deck:} 1 × Might card, 2 × Magic card, 1 × Skill card
+\textbf{Ivor's Deck:} 1 × Might Card, 2 × Magic Card, 1 × Skill Card
 
-\textbf{Ivor's Spell Deck:} 1 × Precision Spell card (it resolves on the first \svg{unit_ranged} Unit able to make a \svg{unit_ranged} attack), 1 × Magic Arrow Spell card
+\textbf{Ivor's Spell Deck:} 1 × Precision Spell Card (it resolves on the first \svg{unit_ranged} Unit able to make a \svg{unit_ranged} attack), 1 × Magic Arrow Spell Card
 
-\textbf{Ivor's Skill:} Archery Ability card (it always resolves its Basic effect)
+\textbf{Ivor's Skill:} Archery Ability Card (it always resolves its Basic effect)
 
 \subsection*{\MakeUppercase{Map Setup}}
 
