--- a/clash/force_of_will.tex
+++ b/clash/force_of_will.tex
@@ -76,7 +76,7 @@ During this Scenario:
 
 \begin{itemize}
   \item When a player Visits an Obelisk, they roll 2 \svg{treasure} and choose one to resolve.
-  \item A player may not use the Diplomacy card to skip Combat on the Dragon Utopia Field.
+  \item A player may not use the Diplomacy Card to skip Combat on the Dragon Utopia Field.
   \item When a Hero moves to the Dragon Utopia Field, they must fight, depending on chosen difficulty, the following number of Neutral Units:
   \begin{itemize}
     \item \textbf{Easy:} 1 × \svgunit{azure}, 2 × \svgunit{silver}, 1 × \svgunit{bronze}
