--- a/campaigns/inferno_steadwicks_fall.tex
+++ b/campaigns/inferno_steadwicks_fall.tex
@@ -52,19 +52,19 @@ This Scenario plays out over 16 Rounds.
 
 \textbf{General Kendal's Army:} A Pack of Archangels, a Pack of Champions, a Pack of Zealots, a Pack of Crusaders, a Pack of Griffins, a Balista War Machine
 
-\textbf{General Kendal's Deck:} 5 × Might card, 1 × Magic card, 3 × Skill card
+\textbf{General Kendal's Deck:} 5 × Might Card, 1 × Magic Card, 3 × Skill Card
 
-\textbf{General Kendal's Spell Deck:} 2 × Haste Spell card
+\textbf{General Kendal's Spell Deck:} 2 × Haste Spell Card
 
-\textbf{General Kendal's Skill:} Artillery Ability card\footnote{For General Kendal, the Artilery Ability card always resolves the Expert effect and the Ballista War Machine Activates every time the Artillery Ability card is drawn, as well as at the beginning of a Combat Round.}
+\textbf{General Kendal's Skill:} Artillery Ability Card\footnote{For General Kendal, the Artilery Ability Card always resolves the Expert effect and the Ballista War Machine Activates every time the Artillery Ability Card is drawn, as well as at the beginning of a Combat Round.}
 
 \textbf{Charging Heroes' Factions:} Rampart, Tower, Castle
 
 \textbf{Charging Heroes' Armies:} Neutral Army is one Level higher than your Hero Level (Max Level VI)\footnote{See page 35, ``Field Difficulty Level Table'' in the Core Rulebook, for further details on the number of Neutral Units you have to draw for this Neutral Army.}.
 
-\textbf{Charging Heroes' Deck:} 2 × Might card, 2 × Magic card
+\textbf{Charging Heroes' Deck:} 2 × Might Card, 2 × Magic Card
 
-\textbf{Charging Heroes' Spell Deck:} 2 × Slow Spell card\footnote{All the Charging Heroes' Enemies use the same AI and Spell Decks. Reset them after every Combat.}.
+\textbf{Charging Heroes' Spell Deck:} 2 × Slow Spell Card\footnote{All the Charging Heroes' Enemies use the same AI and Spell Decks. Reset them after every Combat.}.
 
 \subsection*{\MakeUppercase{Map Setup}}
 
