--- a/sections/recommendations.tex
+++ b/sections/recommendations.tex
@@ -35,7 +35,7 @@ After players prepare their starting M\&M Decks, it is recommended to remove Mag
 
 \subsection*{Trading Post}
 
-Although rules as written state that you can remove only one card from your hand while Visiting a Trading Post, it is recommended to allow removing as many as you like.
+Although rules as written state that you can remove only one Card from your hand while Visiting a Trading Post, it is recommended to allow removing as many as you like.
 
 \includegraphics[width=\linewidth]{\art/rogue.jpg}
 
@@ -101,7 +101,7 @@ The following are not custom rules, but rather recommendations to help you get t
 \begin{itemize}
   \item When deciding which building to construct in your Town, especially in the early game, it is \textit{usually} best to prioritize Units over the City Hall, Citadel, Mage Guild, or other Faction-specific buildings.
   \item If you're unsure which Spell, Artifact, or Ability to choose, prioritize those that help you cycle through your Deck.
-    This includes any cards that allow you to draw cards or retrieve cards from your Discard Pile.
+    This includes any Cards that allow you to draw Cards or retrieve Cards from your Discard Pile.
   \item Try to avoid using your Main Hero's Movement Points for Actions that your Secondary Hero can handle, such as flipping the Map Tiles, Visiting Water Wheels, and so on.
 \end{itemize}
 
